Refactor map wall planning and client HUD flow