@@ -4,15 +4,17 @@ import dev.mappywall.core.RouteStep;
 import dev.mappywall.core.RouteStepState;
 import dev.mappywall.core.MapBounds;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.PriorityQueue;
+import java.util.Set;
 import net.minecraft.client.player.LocalPlayer;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.tags.FluidTags;
 import net.minecraft.util.Mth;
@@ -20,11 +22,25 @@ import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
 
 public final class LocalPathPlanner {
-    private static final int MAX_NODES = 3000;
-    private static final int MAX_HORIZONTAL_RANGE = 36;
-    private static final int MAX_VERTICAL_RANGE = 10;
+    private static final int MAX_NODES = 4500;
+    private static final int MAX_HORIZONTAL_RANGE = 28;
+    private static final int MAX_VERTICAL_RANGE = 8;
     private static final int MAX_DROP = 3;
     private static final int MAX_BREAK_BLOCKS = 9;
+    private static final int MAX_PLACE_BLOCKS = 16;
+    private static final double BREAK_COST = 140.0;
+    private static final double PLACE_COST = 96.0;
+    private static final Set<String> DANGEROUS_BLOCKS = Set.of(
+            "minecraft:cactus",
+            "minecraft:magma_block",
+            "minecraft:campfire",
+            "minecraft:soul_campfire",
+            "minecraft:fire",
+            "minecraft:soul_fire",
+            "minecraft:powder_snow",
+            "minecraft:sweet_berry_bush",
+            "minecraft:wither_rose"
+    );
     private static final int REACHED_TARGET_RADIUS = 3;
     private static final int REGION_ENTRY_INSET_BLOCKS = 8;
 
@@ -44,13 +60,37 @@ public final class LocalPathPlanner {
     }
 
     public PathPlan plan(NavigationSnapshot snapshot, RouteStep routeStep, AutoNavigationConfig config) {
+        AutoNavigationConfig nonModifying = new AutoNavigationConfig(
+                false,
+                config.breakListMode(),
+                config.breakBlocks(),
+                false,
+                config.placeListMode(),
+                config.placeBlocks(),
+                config.eatingEnabled(),
+                config.foodListMode(),
+                config.foods(),
+                config.eatAtFoodLevel()
+        );
+        PathPlan safePlan = search(snapshot, routeStep, nonModifying);
+        if (safePlan.reachedTarget()
+                || !safePlan.isEmpty()
+                || (!config.blockBreakingEnabled() && !config.blockPlacingEnabled())) {
+            return safePlan;
+        }
+        // Only consider modifying the world once an exhaustive local search cannot
+        // make even one step of progress without doing so.
+        return search(snapshot, routeStep, config);
+    }
+
+    private PathPlan search(NavigationSnapshot snapshot, RouteStep routeStep, AutoNavigationConfig config) {
         BlockPos start = stableFeetPos(snapshot, snapshot.start());
         BlockPos target = nearestRegionTarget(start, routeStep);
-        SearchNode startNode = new SearchNode(start, null, StepAction.WALK, null, 0, 0.0, heuristic(start, target));
+        SearchNode startNode = new SearchNode(start, null, StepAction.WALK, null, 0, 0, 0.0, heuristic(start, target));
         PriorityQueue<SearchNode> open = new PriorityQueue<>(Comparator.comparingDouble(SearchNode::score));
         Map<SearchKey, Double> bestCost = new HashMap<>();
         open.add(startNode);
-        bestCost.put(new SearchKey(start, 0), 0.0);
+        bestCost.put(new SearchKey(start, 0, 0), 0.0);
 
         SearchNode best = startNode;
         int visited = 0;
@@ -67,11 +107,11 @@ public final class LocalPathPlanner {
             }
 
             for (SearchNode next : neighbors(snapshot, current, start, target, config)) {
-                Double known = bestCost.get(new SearchKey(next.pos, next.breakCount));
+                Double known = bestCost.get(new SearchKey(next.pos, next.breakCount, next.placeCount));
                 if (known != null && known <= next.cost) {
                     continue;
                 }
-                bestCost.put(new SearchKey(next.pos, next.breakCount), next.cost);
+                bestCost.put(new SearchKey(next.pos, next.breakCount, next.placeCount), next.cost);
                 open.add(next);
             }
         }
@@ -108,7 +148,7 @@ public final class LocalPathPlanner {
             BlockPos target,
             AutoNavigationConfig config
     ) {
-        ArrayList<SearchNode> result = new ArrayList<>(16);
+        ArrayList<SearchNode> result = new ArrayList<>(20);
         for (int[] direction : DIRECTIONS) {
             int dx = direction[0];
             int dz = direction[1];
@@ -123,23 +163,46 @@ public final class LocalPathPlanner {
             addMove(world, result, current, target, current.pos.offset(dx, 0, dz), StepAction.WALK, 1.0 + diagonalCost(dx, dz), config);
             if (!diagonal) {
                 addMove(world, result, current, target, current.pos.offset(dx, 1, dz), StepAction.JUMP, 2.2, config);
-                for (int drop = 1; drop <= MAX_DROP; drop++) {
-                    BlockPos down = current.pos.offset(dx, -drop, dz);
-                    if (down.getY() < world.getBottomY()) {
-                        break;
-                    }
-                    if (standable(world, down) || swimmable(world, down)) {
-                        addMove(world, result, current, target, down, StepAction.DROP, 1.5 + drop, config);
-                        break;
-                    }
-                    if (!isPassable(world, down)) {
-                        break;
+                BlockPos dropEntry = current.pos.offset(dx, 0, dz);
+                if (isPassable(world, dropEntry) && isPassable(world, dropEntry.above())) {
+                    for (int drop = 1; drop <= MAX_DROP; drop++) {
+                        BlockPos down = current.pos.offset(dx, -drop, dz);
+                        if (down.getY() < world.getBottomY()) {
+                            break;
+                        }
+                        if (standable(world, down) || swimmable(world, down)) {
+                            addMove(world, result, current, target, down, StepAction.DROP, 1.5 + drop * drop, config);
+                            break;
+                        }
+                        if (!isPassable(world, down) || !isPassable(world, down.above())) {
+                            break;
+                        }
                     }
                 }
             }
 
             addBreakMove(world, result, current, target, current.pos.offset(dx, 0, dz), config, dx, dz);
-            addPlaceMove(world, result, current, target, current.pos.offset(dx, 0, dz), config);
+        }
+
+        boolean hasReasonableNonPlaceRoute = current.action != StepAction.PLACE
+                && result.stream().anyMatch(next ->
+                        next.action != StepAction.PLACE
+                                && next.heuristic <= current.heuristic + 0.75
+                                && (current.parent == null || !next.pos.equals(current.parent.pos)));
+        if (!hasReasonableNonPlaceRoute) {
+            for (int[] direction : DIRECTIONS) {
+                if (Math.abs(direction[0]) + Math.abs(direction[1]) != 1) {
+                    continue;
+                }
+                addPlaceMove(
+                        world,
+                        result,
+                        current,
+                        target,
+                        current.pos.offset(direction[0], 0, direction[1]),
+                        config
+                );
+            }
         }
         return result;
     }
@@ -166,7 +229,16 @@ public final class LocalPathPlanner {
         }
         double cost = current.cost + extraCost + terrainCost(world, pos);
         StepAction plannedAction = swimming ? StepAction.SWIM : action;
-        result.add(new SearchNode(pos, current, plannedAction, null, current.breakCount, cost, heuristic(pos, target)));
+        result.add(new SearchNode(
+                pos,
+                current,
+                plannedAction,
+                null,
+                current.breakCount,
+                current.placeCount,
+                cost,
+                heuristic(pos, target)
+        ));
     }
 
     private void addBreakMove(
@@ -187,8 +259,11 @@ public final class LocalPathPlanner {
             return;
         }
         BlockPos block = obstacle.get();
-        String blockId = world.cell(block).blockId();
-        if (!config.allowsBreak(blockId)) {
+        Cell obstacleCell = world.cell(block);
+        String blockId = obstacleCell.blockId();
+        if (!obstacleCell.loaded() || obstacleCell.water() || obstacleCell.lava()
+                || obstacleCell.passable() || "minecraft:air".equals(blockId)
+                || !config.allowsBreak(blockId)) {
             return;
         }
         if (heuristic(pos, target) > current.heuristic + 1.0) {
@@ -199,13 +274,14 @@ public final class LocalPathPlanner {
         if (!standableIfBroken(world, simulated, block) && !swimmable(world, simulated)) {
             return;
         }
-        double cost = current.cost + 80.0 + diagonalCost(dx, dz) + heuristic(simulated, target) * 0.05;
+        double cost = current.cost + BREAK_COST + diagonalCost(dx, dz) + heuristic(simulated, target) * 0.05;
         result.add(new SearchNode(
                 simulated,
                 current,
                 StepAction.BREAK,
                 block,
                 current.breakCount + 1,
+                current.placeCount,
                 cost,
                 heuristic(simulated, target)
         ));
@@ -219,15 +295,31 @@ public final class LocalPathPlanner {
             BlockPos pos,
             AutoNavigationConfig config
     ) {
-        if (!config.blockPlacingEnabled() || !withinWorld(world, pos) || !isPassable(world, pos) || !isPassable(world, pos.above())) {
+        if (!config.blockPlacingEnabled()
+                || current.placeCount >= MAX_PLACE_BLOCKS
+                || !withinWorld(world, pos)
+                || !isPassable(world, pos)
+                || !isPassable(world, pos.above())) {
             return;
         }
         BlockPos support = pos.below();
         if (!isReplaceable(world, support)) {
             return;
         }
-        double cost = current.cost + 12.0 + terrainCost(world, pos);
-        result.add(new SearchNode(pos, current, StepAction.PLACE, support, current.breakCount, cost, heuristic(pos, target)));
+        if (world.cell(support).water() || world.cell(support).lava()) {
+            return;
+        }
+        double cost = current.cost + PLACE_COST + terrainCost(world, pos);
+        result.add(new SearchNode(
+                pos,
+                current,
+                StepAction.PLACE,
+                support,
+                current.breakCount,
+                current.placeCount + 1,
+                cost,
+                heuristic(pos, target)
+        ));
     }
 
     private Optional<PathStep> immediateBreakStep(
@@ -245,8 +337,11 @@ public final class LocalPathPlanner {
                 continue;
             }
             BlockPos block = obstacle.get();
-            String blockId = world.cell(block).blockId();
-            if (!config.allowsBreak(blockId)) {
+            Cell obstacleCell = world.cell(block);
+            String blockId = obstacleCell.blockId();
+            if (!obstacleCell.loaded() || obstacleCell.water() || obstacleCell.lava()
+                    || obstacleCell.passable() || "minecraft:air".equals(blockId)
+                    || !config.allowsBreak(blockId)) {
                 continue;
             }
             if (heuristic(pos, target) >= heuristic(start, target)) {
@@ -280,7 +375,7 @@ public final class LocalPathPlanner {
     }
 
     private boolean isPassable(NavigationSnapshot world, BlockPos pos) {
-        if (!withinWorld(world, pos) || world.cell(pos).lava()) {
+        if (!withinWorld(world, pos) || !world.cell(pos).loaded() || world.cell(pos).lava()) {
             return false;
         }
         return world.cell(pos).passable();
@@ -294,21 +389,46 @@ public final class LocalPathPlanner {
         if (!withinWorld(world, pos)) {
             return false;
         }
+        if (!world.cell(pos).loaded()) {
+            return false;
+        }
         if (world.cell(pos.above()).water()) {
             return true;
         }
-        return !world.cell(pos).passable();
+        return !world.cell(pos).passable() && !isUnsafeSupport(world.cell(pos).blockId());
+    }
+
+    private boolean isUnsafeSupport(String blockId) {
+        return blockId.endsWith("_fence")
+                || blockId.endsWith("_fence_gate")
+                || blockId.endsWith("_wall")
+                || blockId.endsWith("_pane")
+                || blockId.equals("minecraft:iron_bars")
+                || blockId.equals("minecraft:chain")
+                || blockId.equals("minecraft:pointed_dripstone");
     }
 
     private boolean isReplaceable(NavigationSnapshot world, BlockPos pos) {
         return withinWorld(world, pos)
+                && world.cell(pos).loaded()
                 && !world.cell(pos).lava()
-                && world.cell(pos).replaceable();
+                && !world.cell(pos).water()
+                && world.cell(pos).replaceable()
+                && "minecraft:air".equals(world.cell(pos).blockId());
     }
 
     private boolean isDangerous(NavigationSnapshot world, BlockPos pos) {
-        return world.cell(pos).lava()
-                || world.cell(pos.above()).lava();
+        return !world.cell(pos).loaded()
+                || !world.cell(pos.above()).loaded()
+                || world.cell(pos).lava()
+                || world.cell(pos.above()).lava()
+                || isHazardCell(world.cell(pos))
+                || isHazardCell(world.cell(pos.above()))
+                || isHazardCell(world.cell(pos.below()));
+    }
+
+    private boolean isHazardCell(Cell cell) {
+        return DANGEROUS_BLOCKS.contains(cell.blockId());
     }
 
     private Optional<BlockPos> firstObstacle(NavigationSnapshot world, BlockPos feet) {
@@ -393,8 +513,8 @@ public final class LocalPathPlanner {
     }
 
     private double heuristic(BlockPos pos, BlockPos target) {
-        int dx = pos.getX() - target.getX();
-        int dz = pos.getZ() - target.getZ();
+        double dx = (double) pos.getX() - target.getX();
+        double dz = (double) pos.getZ() - target.getZ();
         int dy = Math.abs(pos.getY() - target.getY());
         return Math.sqrt(dx * dx + dz * dz) + dy * 2.0;
     }
@@ -409,6 +529,7 @@ public final class LocalPathPlanner {
             StepAction action,
             BlockPos actionBlock,
             int breakCount,
+            int placeCount,
             double cost,
             double heuristic
     ) {
@@ -417,7 +538,7 @@ public final class LocalPathPlanner {
         }
     }
 
-    private record SearchKey(BlockPos pos, int breakCount) {
+    private record SearchKey(BlockPos pos, int breakCount, int placeCount) {
     }
 
     public record PathPlan(List<PathStep> steps, BlockPos plannedEnd, boolean reachedTarget) {
@@ -439,10 +560,12 @@ public final class LocalPathPlanner {
             int maxZ,
             int bottomY,
             int topYInclusive,
-            Map<Long, Cell> cells
+            Map<Long, Cell> cells,
+            Set<Long> loadedColumns
     ) {
-        private static final Cell DEFAULT_AIR = new Cell(true, true, false, false, "minecraft:air");
-        private static final Cell OUT_OF_RANGE = new Cell(false, false, false, false, "minecraft:bedrock");
+        private static final Cell DEFAULT_AIR = new Cell(true, true, false, false, "minecraft:air", true);
+        private static final Cell OUT_OF_RANGE = new Cell(false, false, false, false, "minecraft:bedrock", false);
+        private static final Cell UNLOADED = new Cell(false, false, false, false, "minecraft:void_air", false);
 
         static NavigationSnapshot capture(LocalPlayer player) {
             Level world = player.level();
@@ -454,10 +577,16 @@ public final class LocalPathPlanner {
             int minY = Math.max(world.getMinY(), start.getY() - MAX_VERTICAL_RANGE - MAX_DROP - 2);
             int maxY = Math.min(world.getMaxY() - 1, start.getY() + MAX_VERTICAL_RANGE + 2);
             Map<Long, Cell> cells = new HashMap<>();
+            Set<Long> loadedColumns = new HashSet<>();
             BlockPos.MutableBlockPos mutable = new BlockPos.MutableBlockPos();
 
             for (int x = minX; x <= maxX; x++) {
                 for (int z = minZ; z <= maxZ; z++) {
+                    mutable.set(x, start.getY(), z);
+                    if (!world.hasChunkAt(mutable)) {
+                        continue;
+                    }
+                    loadedColumns.add(columnKey(x, z));
                     for (int y = minY; y <= maxY; y++) {
                         mutable.set(x, y, z);
                         BlockState state = world.getBlockState(mutable);
@@ -465,14 +594,13 @@ public final class LocalPathPlanner {
                         boolean lava = world.getFluidState(mutable).is(FluidTags.LAVA);
                         boolean passable = state.getCollisionShape(world, mutable).isEmpty();
                         boolean replaceable = state.canBeReplaced();
-                        if (passable && replaceable && !water && !lava) {
-                            continue;
-                        }
-
                         String blockId = state.isAir()
                                 ? "minecraft:air"
                                 : BuiltInRegistries.BLOCK.getKey(state.getBlock()).toString();
-                        cells.put(mutable.asLong(), new Cell(passable, replaceable, water, lava, blockId));
+                        if (state.isAir() && !water && !lava) {
+                            continue;
+                        }
+                        cells.put(mutable.asLong(), new Cell(passable, replaceable, water, lava, blockId, true));
                     }
                 }
             }
@@ -487,7 +615,8 @@ public final class LocalPathPlanner {
                     maxZ,
                     world.getMinY(),
                     world.getMaxY() - 1,
-                    Map.copyOf(cells)
+                    Collections.unmodifiableMap(cells),
+                    Collections.unmodifiableSet(loadedColumns)
             );
         }
 
@@ -500,7 +629,18 @@ public final class LocalPathPlanner {
                     || pos.getZ() > maxZ) {
                 return OUT_OF_RANGE;
             }
+            if (!loadedColumns.contains(columnKey(pos.getX(), pos.getZ()))) {
+                return UNLOADED;
+            }
             return cells.getOrDefault(pos.asLong(), DEFAULT_AIR);
+        }
+
+        boolean isLoaded(BlockPos pos) {
+            return cell(pos).loaded();
+        }
+
+        private static long columnKey(int x, int z) {
+            return ((long) x << 32) ^ (z & 0xffffffffL);
         }
 
         int getBottomY() {
@@ -512,7 +652,14 @@ public final class LocalPathPlanner {
         }
     }
 
-    private record Cell(boolean passable, boolean replaceable, boolean water, boolean lava, String blockId) {
+    private record Cell(
+            boolean passable,
+            boolean replaceable,
+            boolean water,
+            boolean lava,
+            String blockId,
+            boolean loaded
+    ) {
     }
 
     public enum StepAction {
